# Ray_Tracer

./: .gitignore  CMakeLists.txt  README.md
src/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  rtweekend.h  sphere.h  vec3.h
src/cuda/: main.cu  utils.hu  vec3.hu
src/serial/: hittable.h  hittable_list.h  ray.h  utils.h  vec3.h
